--- a/gb/20/8/28/n12363939.md
+++ b/gb/20/8/28/n12363939.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qrykyq3445/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qrykyq3445/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qrykyq3445/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qrykyq3445/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qrykyq3445/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qrykyq3445/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qrykyq3445/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qrykyq3445/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：林卓廷许智峯获保释 民众到场声援</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/200827102241100311-600x400.jpg" />
 <h6>2020年8月27日傍晚，香港，民主党立法会议员林卓廷、许智峯离开法庭，受到市民鼓掌欢迎。（宋碧龙／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年08月28日讯】（大纪元记者林紫蓉报导）26日香港立法会议员<ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E6%9E%97%E5%8D%93%E5%BB%B7.md#1">林卓廷</a>及<ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E8%AE%B8%E6%99%BA%E5%B3%AF.md#1">许智峯</a>遭到逮捕，27日下午，现任立法会议员尹兆坚、黄碧云、邵家臻、张超雄、陈淑庄、郭荣铿及民阵副召集人陈皓桓等人到<ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E8%A5%BF%E4%B9%9D%E9%BE%99%E8%A3%81%E5%88%A4%E6%B3%95%E9%99%A2.md#1">西九龙裁判法院</a>声援，傍晚林卓廷、许智峯获准<ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E4%BF%9D%E9%87%8A.md#1">保释</a>。</p>
-<p><ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E6%9E%97%E5%8D%93%E5%BB%B7.md#1">林卓廷</a>被指控在去年7.21事件中“参与暴动”，而<ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E8%AE%B8%E6%99%BA%E5%B3%AF.md#1">许智峯</a>则被指控在去年7.6屯门公园事件中“强删他人手机资料”。“7.21事件”是指2019年7月21日当晚，大批身穿白衣者手持武器于元朗区无差别攻击市民，伤者包含林卓廷等45人，市民报警后，警方疑似包庇白衣人。“7.6屯门公园事件”是指2019年7月6日民众在网上发起“光复屯门公园”游行，活动结束后，约400名抗议者转到屯门警署外聚集，林卓廷、许智峯等人前往现场调停。</p>
-<p>27日在法院声援的民众表示林、许二人受到冤屈，指警方颠倒是非、指鹿为马，更指出当时有许多证据可以佐证，并非如受指控的内容那样。傍晚两人获<ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E4%BF%9D%E9%87%8A.md#1">保释</a>之后，接受媒体采访，许智峯表示，保护市民是议员的天职，也是自己的荣耀，未来会继续走上前线。林卓廷则质疑警方不拘捕“7.21”打人凶徒及煽动打人者，反而拘捕保护市民的议员，呼吁市民团结一致对抗林郑政权。</p>
-<figure id="attachment_12363949" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200827103623100311.jpg"><img class="wp-image-12363949 size-large" title="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" src="https://i.epochtimes.com/assets/uploads/2020/08/200827103623100311-600x400.jpg" alt="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月27日，香港<ahref="https://github.com/qrykyq3445/djy/blob/master/gb/tag/%E8%A5%BF%E4%B9%9D%E9%BE%99%E8%A3%81%E5%88%A4%E6%B3%95%E9%99%A2.md#1">西九龙裁判法院</a>，下午现任立法会议员等人到场声援被捕的林卓廷与许智峯。（宋碧龙／大纪元）</figcaption></figure>
+	<p>【大纪元2020年08月28日讯】（大纪元记者林紫蓉报导）26日香港立法会议员<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%97%E5%8D%93%E5%BB%B7.md#1">林卓廷</a>及<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%AE%B8%E6%99%BA%E5%B3%AF.md#1">许智峯</a>遭到逮捕，27日下午，现任立法会议员尹兆坚、黄碧云、邵家臻、张超雄、陈淑庄、郭荣铿及民阵副召集人陈皓桓等人到<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A5%BF%E4%B9%9D%E9%BE%99%E8%A3%81%E5%88%A4%E6%B3%95%E9%99%A2.md#1">西九龙裁判法院</a>声援，傍晚林卓廷、许智峯获准<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BF%9D%E9%87%8A.md#1">保释</a>。</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%97%E5%8D%93%E5%BB%B7.md#1">林卓廷</a>被指控在去年7.21事件中“参与暴动”，而<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%AE%B8%E6%99%BA%E5%B3%AF.md#1">许智峯</a>则被指控在去年7.6屯门公园事件中“强删他人手机资料”。“7.21事件”是指2019年7月21日当晚，大批身穿白衣者手持武器于元朗区无差别攻击市民，伤者包含林卓廷等45人，市民报警后，警方疑似包庇白衣人。“7.6屯门公园事件”是指2019年7月6日民众在网上发起“光复屯门公园”游行，活动结束后，约400名抗议者转到屯门警署外聚集，林卓廷、许智峯等人前往现场调停。</p>
+<p>27日在法院声援的民众表示林、许二人受到冤屈，指警方颠倒是非、指鹿为马，更指出当时有许多证据可以佐证，并非如受指控的内容那样。傍晚两人获<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BF%9D%E9%87%8A.md#1">保释</a>之后，接受媒体采访，许智峯表示，保护市民是议员的天职，也是自己的荣耀，未来会继续走上前线。林卓廷则质疑警方不拘捕“7.21”打人凶徒及煽动打人者，反而拘捕保护市民的议员，呼吁市民团结一致对抗林郑政权。</p>
+<figure id="attachment_12363949" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200827103623100311.jpg"><img class="wp-image-12363949 size-large" title="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" src="https://i.epochtimes.com/assets/uploads/2020/08/200827103623100311-600x400.jpg" alt="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月27日，香港<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A5%BF%E4%B9%9D%E9%BE%99%E8%A3%81%E5%88%A4%E6%B3%95%E9%99%A2.md#1">西九龙裁判法院</a>，下午现任立法会议员等人到场声援被捕的林卓廷与许智峯。（宋碧龙／大纪元）</figcaption></figure>
 <figure id="attachment_12363950" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200827103636100311.jpg"><img class="wp-image-12363950 size-large" title="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" src="https://i.epochtimes.com/assets/uploads/2020/08/200827103636100311-600x400.jpg" alt="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月27日，香港西九龙裁判法院，下午现任立法会议员等人到场声援被捕的林卓廷与许智峯。（宋碧龙／大纪元）</figcaption></figure>
 <figure id="attachment_12363951" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200827103632100311.jpg"><img class="wp-image-12363951 size-large" title="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" src="https://i.epochtimes.com/assets/uploads/2020/08/200827103632100311-600x400.jpg" alt="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月27日，香港西九龙裁判法院，下午现任立法会议员等人到场声援被捕的林卓廷与许智峯。（宋碧龙／大纪元）</figcaption></figure>
 <figure id="attachment_12363953" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200827103915100311.jpg"><img class="wp-image-12363953 size-large" title="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" src="https://i.epochtimes.com/assets/uploads/2020/08/200827103915100311-600x400.jpg" alt="林卓廷、许智峯等十人今日提堂后获保释 民主派议员来声援" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月27日，香港西九龙裁判法院，下午现任立法会议员等人到场声援被捕的林卓廷与许智峯。（宋碧龙／大纪元）</figcaption></figure>
@@ -27,42 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/19/12/9/n11710255.md#1">议员林卓廷：港人需凝聚社会力量 齐抗极权</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/6/22/n12202753.md#1">林卓廷去信邓炳强 举报何君尧石镜泉涉7.21恐袭</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12357751.md#1">港警大搜捕 议员林卓廷许智峯等16人被抓</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12360032.md#1">港警捕林卓廷许智峯等16人 被斥黑白颠倒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/9/n11710255.md#1">议员林卓廷：港人需凝聚社会力量 齐抗极权</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/6/22/n12202753.md#1">林卓廷去信邓炳强 举报何君尧石镜泉涉7.21恐袭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/26/n12357751.md#1">港警大搜捕 议员林卓廷许智峯等16人被抓</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/26/n12360032.md#1">港警捕林卓廷许智峯等16人 被斥黑白颠倒</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/1/n10823173.md#1" target="_blank">【还原史实】中共“大跃进” 四千万中国人活活饿死</a></li><li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10204699.md#1" target="_blank">古玉文：消灭私有制不是出路（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/4/n9353698.md#1" target="_blank">代理法轮功案 律师从无罪辩护到主动控告</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/24/n12353033.md#1">日本神秘湖泊“龙之眼” 演绎龙的传说</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/27/n12360608.md#1">【大选观察】共和党大会 非裔和古巴裔挺川普</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/28/n12363339.md#1">【西岸观察】球星带头罢赛 NBA越来越政治</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/27/n12361834.md#1">【重播】共和党大会第四日演讲：伟大之国</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12357980.md#1">【西岸观察】最准预测称川普胜算91%</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12359264.md#1">【薇羽看世间】北戴河习妥协 习胡再度联手？</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12358137.md#1">习近平座谈会九经济智囊曝光 李克强被边缘化</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/25/n12357141.md#1">65岁张国立被搀扶拍戏 传遭吸毒家暴儿害惨</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/27/n12362745.md#1">台湾网红馆长陈之汉遭枪击 鲜血直流紧急送医</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12359533.md#1">新剧造型曝光获称小章子怡 童瑶高情商回应</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/25/n12356940.md#1">逃税风波过去两年 范冰冰获首个全球代言</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/27/n12362251.md#1">赞台湾民主自由 中国网红微博账号遭永久删除</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/25/n12356691.md#1">膝关节疼痛不敢动？单脚摆10下甩掉膝盖痛</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12359296.md#1">每天2个动作 让膝盖变年轻！躺着就能做</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12357981.md#1">为什么美国机场偏好耳朵下垂的工作犬？</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/25/n12355835.md#1">F-35战机空投多枚小直径炸弹 命中率100%</a></li>
-<li><a href="https://github.com/qrykyq3445/djy/blob/master/gb/20/8/26/n12359464.md#1">胃癌大多是吃出来的！少碰3种食物 不让癌上身</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qrykyq3445/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qrykyq3445/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/28/n12363939.htm">组图：林卓廷许智峯获保释 民众到场声援</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/28/n12363939.htm">组图：林卓廷许智峯获保释 民众到场声援</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/qrykyq3445/djy/blob/master/gb/20/8/28/n12363939.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qrykyq3445/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qrykyq3445/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qrykyq3445/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qrykyq3445/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qrykyq3445/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/8/28/n12363939.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
